//  File: tao_channel_child_params.proto
//  Author: Tom Roeder <tmroeder@google.com>
//
//  Description: Protocol buffers for TaoChannel parameters
//
//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
package tao;

message TaoChildChannelParams {
  required string channel_type = 1;
  required bytes params = 2;
}
